added folder creation logic

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 PORT=8082
-EMAIL_SENDER=''
-PASSWORD_SENDER=''
-NOTIFY_ADMIN=true
-EMAIL_RECEIVERS=''
+EMAIL_SENDER=''     #Email Sender (and receiver)
+PASSWORD_SENDER=''  #Gmail App Password
+NOTIFY_ADMIN=true   #Set it to true, if you want to receive email notification
+EMAIL_RECEIVERS=''  #Email Addresses separated with ','
