--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-   "chalk": "^4.1.2",
+    "canvas": "^3.1.0",
+    "chalk": "^4.1.2",
     "chokidar": "^4.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "face-api.js": "^0.22.2",
     "helmet": "^8.0.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
