feat: face similarity

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 PORT=8082
-EMAIL_SENDER=''     #Email Sender (and receiver)
-PASSWORD_SENDER=''  #Gmail App Password
-NOTIFY_ADMIN=true   #Set it to true, if you want to receive email notification
-EMAIL_RECEIVERS=''  #Email Addresses separated with ','
+EMAIL_SENDER=''      #Email Sender (and receiver)
+PASSWORD_SENDER=''   #Gmail App Password
+NOTIFY_ADMIN=true    #Set it to true, if you want to receive email notification
+EMAIL_RECEIVERS=''   #Email Addresses separated with ','
+FACE_SIMILARITY=true #Set this to true to enable face similarity scanning within the face-repository folder.
